[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/enemies/Gomba/gomba.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/NES - Super Mario Bros - Enemies & Bosses.png" type="Texture" id=2]
[ext_resource path="res://scripts/change_direction/change_direction.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 8 )

[sub_resource type="Animation" id=2]
resource_name = "dead"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 39, 36, 16, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 4.08177 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 60, 21, 16, 23 ), Rect2( 77, 20, 16, 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.5, 0.471575 )

[node name="Koopa" type="KinematicBody2D" groups=[
"goomba",
"inimigo",
]]
scale = Vector2( 4, 4 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )
ENEMY_SPEED_X = 1.0

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 60, 21, 16, 23 )

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.56762 )
shape = SubResource( 1 )

[node name="animation_player" type="AnimationPlayer" parent="."]
autoplay = "walking"
playback_speed = 0.7
anims/dead = SubResource( 2 )
anims/walking = SubResource( 3 )

[node name="hitbox" type="Area2D" parent="."]
position = Vector2( 0, 3.56762 )
collision_layer = 2
collision_mask = 4

[node name="collision_shape_2d" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, -8.25 )
shape = SubResource( 4 )

[node name="change_direction" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 7.50687 )

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="left_collision" from="change_direction" to="." method="_on_change_direction_left_collision"]
[connection signal="right_collision" from="change_direction" to="." method="_on_change_direction_right_collision"]
